--- a/Cordova/www/index.html
+++ b/Cordova/www/index.html
@@ -28,11 +28,11 @@
             * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
                 * Enable inline JS: add 'unsafe-inline' to default-src
         -->
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self' *.facebook.com *.facebook.net *.fbcdn.net https://scontent.xx.fbcdn.net data:; style-src 'self' 'unsafe-inline'; font-src data:; script-src 'self' *.facebook.net *.facebook.com 'unsafe-eval'">
+        <meta http-equiv="Content-Security-Policy" content="default-src http://138.197.98.191:8080 'self' *.facebook.com *.facebook.net *.fbcdn.net https://scontent.xx.fbcdn.net data:; style-src 'self' 'unsafe-inline'; font-src data:; script-src 'self' *.facebook.net *.facebook.com 'unsafe-eval'">
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-        <title>FreshWater</title>
+        <title>ToDo</title>
     </head>
     <body style="margin: 64px 0px">
       <div id="fb-root">
